# strands-ui

./: .gitignore  .mcp.json  HOOKS_ARCHITECTURE.md  README.md  START_HERE.md  TEST.md  agent_server.py  example-agent-config.py.old  example-agent-interactive.py.old  example-agent.py  my_agent.py  package.json  pyproject.toml  start-all.sh  start-backend.sh  start-frontend.sh  test-local-model.sh  ui_hooks.py
.claude/: settings.local.json
backend/: .gitignore  __init__.py  agent_session.py  cli_manager.py.old  main.py  requirements.txt  ui_hooks.py
frontend/: package-lock.json  package.json  server.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInput.tsx  ChatMessage.tsx  PlanModeDetector.tsx  Sidebar.tsx  ThinkingDisplay.tsx  ToolCallDisplay.tsx  ToolCallVisualizer.tsx
frontend/lib/: api.ts  sessions.ts  store.ts  websocket.ts
strands_sessions/session_34bccd1b-872b-4f45-8bb1-d7834e376c3b/: session.json
strands_sessions/session_34bccd1b-872b-4f45-8bb1-d7834e376c3b/agents/agent_default/: agent.json
strands_sessions/session_662784af-52ce-49c4-9b77-1a48963fd00d/: session.json
strands_sessions/session_662784af-52ce-49c4-9b77-1a48963fd00d/agents/agent_default/: agent.json
strands_sessions/session_69f21f3b-a4a9-4ad5-afb8-80a321aa6510/: session.json
strands_sessions/session_69f21f3b-a4a9-4ad5-afb8-80a321aa6510/agents/agent_default/: agent.json
strands_sessions/session_87897e90-b0c0-4f48-b9e8-e630733b2c69/: session.json
strands_sessions/session_f7fd695e-c808-4cd1-b783-a29c01d91ca3/: session.json
(+16 files in other folders)
